--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,11 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+.serverless
+
+# credentials to access Google Sheets
+google-creds.json
+
+# OpenAI API Key
+openai-key.txt
